--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,8 @@
     width: 100%;
   }
 }
+
+.swal2-ant-modal {
+  border-radius: 2px !important;
+  box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05);
+}
