--- a/src/app/pages/role-add/role-add.component.html
+++ b/src/app/pages/role-add/role-add.component.html
@@ -4,9 +4,19 @@
 
 <nz-card>
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
-    <nz-form-item formGroupName="name">
+    <nz-form-item formGroupName="name" bitI18nUpdate>
       <nz-form-label bitCol="label" nzRequired>
-        {{ bit.l["name"] }}
+        <span>
+          {{ bit.l["name"] }}
+          <i
+            nz-icon
+            nz-tooltip
+            [nzTooltipTitle]="bit.l['i18n']"
+            nzType="translation"
+            nzTheme="outline"
+          >
+          </i>
+        </span>
       </nz-form-label>
       <ng-container *ngFor="let x of bit.i18nContain">
         <nz-form-control
